test/frontend/fail/unknown_function.osl
shader test() {
    unknown_function_with_complex_name();
}
